--- a/public/style.css
+++ b/public/style.css
@@ -19,6 +19,14 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
+  z-index: -2;
+}
+#scratch-canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   z-index: -1;
 }
 .hide {
